--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 p {
     color: steelblue;
   }
@@ -19,12 +24,14 @@ main img {
   border: 1px solid steelblue;
   padding: 2px;
   box-shadow: 0 0 30px;
+  float: right;
 }
 p {
   padding: 0;
 }
 main{
-  max-width: 40rem;
+  max-width: 25rem;
+
 }
 aside {
   width: 20rem;
@@ -38,9 +45,26 @@ aside {
 aside img{
   width: 150px;
   height: auto;
+
 }
 footer{
   margin-top: 1em;
   border-top: 1px solid #001;
   text-align: center;
+}
+
+/* Class Selectors */
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 1rem;
+  background-color: #eee;
+  color: #000;
+}
+aside {
+  width: 20em;
+  text-align: center;
+}
+aside h2{
+  align-self: auto;
 }
