--- a/styles/style.css
+++ b/styles/style.css
@@ -62,9 +62,11 @@ footer{
   color: #000;
 }
 aside {
+  position: relative;
   width: 20em;
   text-align: center;
 }
 aside h2{
+  position: absolute;
   align-self: auto;
 }
