--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -40,11 +40,14 @@ header img {
     height: 100px; /* Altura da imagem do logo */
     border-radius: 50%; /* Fazer a imagem do logo circular */
 }
-
-/* Estilo para a lista de navegação no cabeçalho */
-header ul.navigation {
-    padding: 0; /* Remover o espaçamento interno da lista */
+nav {
+    display: flex;
 }
+/* Estilo para a lista de navegação no cabeçalho */
+nav ul  {
+    display: flex;
+
+} 
 
 /* Estilo para os links de navegação no cabeçalho */
 header ul.navigation a {
@@ -119,70 +122,87 @@ article p {
 /*DIV*/
 /*SECTION*/
 section {
+    height: 270px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 30px);
-    height: 270px;
+    
 }
 
 section p:first-of-type {
-    padding: 20px;
-    grid-column: 1/4;
+    padding: 30px;
+    grid-column: 1/3;
     grid-row: 3;
 }
 
 section p:nth-of-type(2) {
-    padding: 20px;
-    grid-column: 5/8;
+    padding: 30px;
+    grid-column: 4/7;
     grid-row: 3;
 }
 
 h2 {
-    grid-column: 4;
+    grid-column: 3;
     grid-row: 1/2;
     text-align: center;
 }
 
 section img{
-    width: 170px;
-    height: 160px;
-    grid-column: 5/4;
-    grid-row: 3/6;
-    border: 0;
-    border-radius: 50%;
-}
-
-.img1 {
-    grid-column: 1;
-    grid-row: 4;
-    padding: 5px;
-    
-}
-.img2 {
-    grid-column: 2;
-    grid-row: 4;
-    padding: 5px;
-}
-.img3 {
     grid-column: 3;
-    grid-row: 4;
+    grid-row: 3/6;
+    border-radius: 50%;
+    min-width: 150px;
+    min-height: 140px;
+    max-width: 170px;
+    max-width: 160px;
     padding: 5px;
+    margin: 0 auto;
 }
-.img4 {
-    grid-column: 4;
-    grid-row: 4;
-    padding: 5px;
-}
-.img5 {
 
+/* SECTION 2 */
+section:nth-of-type(2) {
+    height: 300px;
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-rows: 50px 35px 170px 25px;
+  }
+  
+  /*SEQUENCY IMG*/
+  /*    IMG 1       */
+  figure:nth-of-type(1) {
+    grid-row: 3;
+    grid-column: 1;
+  }
+
+/*    IMG 2     */
+figure:nth-of-type(2) {
+    grid-row: 3;
+    grid-column: 2;
+  }
+/*    IMG 3     */
+figure:nth-of-type(3) {
+    grid-row: 3;
+    grid-column: 3;
+  }
+
+/*    IMG 4     */
+figure:nth-of-type(4) {
+    grid-row: 3;
+    grid-column: 4;
+  }
+
+/*    IMG 5       */
+figure:nth-of-type(5) {
+    grid-row: 3;
     grid-column: 5;
-    grid-row: 4;
-    padding: 5px;
-}
+  }
+
+/* h2 class */
 .pix {
     grid-column: 3/4;
-    grid-row: 1/2;
+    grid-row: 0;
 }
+
 /* Estilo para a outra imagem */
 img[src="images/teacher.png"] {
     position: absolute;
@@ -203,10 +223,39 @@ img[src="images/teacher.png"] {
 .box {
     background-color: var(--primary-color--);
     padding: 20px;
-    border: 1px solid #000;
+    border: 1px solid rgb(4, 151, 4);
     margin: 10px; /* Adiciona margens entre os elementos */
 }
-footer img {
-    width: 50px;
-    height: auto;
+
+/* Estilos para o rodapé */
+footer {
+    background-color: var(--primary-color--); /* Cor de fundo */
+    color: black; /* Cor do texto */
+    text-align: center; /* Centraliza o conteúdo */
+    padding: 20px; /* Espaçamento interno */
+  }
+  
+  /* Estilos para o texto de direitos autorais */
+  footer p {
+    font-size: 14px; /* Tamanho da fonte */
+  }
+  
+  /* Estilos para os links de redes sociais */
+  footer a {
+
+    display: inline-block; /* Para que os elementos de âncora apareçam lado a lado */
+    margin: 0 10px; /* Espaçamento horizontal entre os ícones das redes sociais */
+  }
+  
+  /* Estilos para as imagens dos ícones de redes sociais */
+  footer img {
+    width: 25px; /* Largura das imagens */
+    height: 25px; /* Altura das imagens */
+    transition: transform 0.2s; /* Adiciona uma transição de escala suave */
+    border-radius: 7px;
 }
+  
+  footer img:hover {
+    transform: scale(1.2); /* Aumenta o tamanho ao passar o mouse */
+  }
+  
