--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -198,6 +198,7 @@ footer p {
 footer a {
     display: inline-block; /* Para que os elementos de âncora apareçam lado a lado */
     margin: 0 10px; /* Espaçamento horizontal entre os ícones das redes sociais */
+    color: #000;
 }
   
 footer img {
@@ -398,6 +399,8 @@ div.trip-item {
 
 div.trip-item h1 {
     font-size: 12px;
+    color: #000;
+    text-decoration: none;
 }
 
 div.trip-item img {
@@ -480,11 +483,12 @@ section.index {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    height: 260px;
+    height: 300px;
     margin-top: 100px;
     margin-left: 30px;
     margin-right: 30px ;
     border: 1px solid black;
+    
 }
 
 section.index form {
@@ -493,21 +497,40 @@ section.index form {
 
 section.index a {
     padding: 20px;
+    grid-column: 2/3;
+    display: flex;
+    text-align: center;
+    text-decoration: none;
 }
 
-section.index > :nth-child(2) {
+.index p {
+    background-color: #3498db;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+section.index div {
     display: flex;
-    justify-content: center;
-    align-items: end;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    padding: 0; 
+    border: 1px solid var(--primary-color); 
+ 
+    position: relative; 
+    height: auto; 
+    border-radius: 0;
+    justify-content: center; 
+    align-items: center; 
 }
 
 section.index img {
-    display: flex;
-    justify-content: center;
-    align-items:  center;
     width: 400px;
     height: 200px;
 }
+
 section.index h1 {
     position:absolute;
     font-size: 15px;
@@ -519,28 +542,28 @@ section.index h1 {
     margin-left: 250px
 }
 
-section.include {
-    margin: 30px;
-    display: grid;
-    grid-template-columns: 190px 1fr 190px 1fr ;
-    grid-template-rows: 1fr;
-    height: 360px;
+table.include {
+    height: 300px;
     margin-top: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
     border: 1px solid black;
 }
 
-section.include p:first-of-type {
-    grid-column: 2/3;
-    grid-row: 1;
+
+
+table.include img {
     padding: 5px;
-    font-size: 16px;
+    width: 150px; /* Largura da imagem do logo */
+    height: 150px; /* Altura da imagem do logo */
+    border-radius: 50%; /* Fazer a imagem do logo circular */
 }
 
-section.include p:nth-of-type(2) {
-    grid-column: 4/5;
-    grid-row: 1;
-    padding: 5px;
-    font-size: 16px;
+table.include p {
+    padding: 10px;
+    font-size: 14px;
+    text-align: justify; /* To justify the text */
 }
+
 
 
