--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -188,11 +188,18 @@ figure:nth-of-type(5) {
 
 /* FOOTER */
 footer {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    height: 100px;
 }
   
 footer p {
-    font-size: 14px; /* Tamanho da fonte */
+    font-size: 14px;
+    align-items: center;
+    margin-left: 300px;
+    margin-right: 200px;
 }
 
 footer a {
@@ -227,6 +234,7 @@ section.main_grid {
     text-align: center;
     justify-items: center;
     align-items: center;
+    height: auto;
 }
 
 section.main_grid img {
@@ -290,7 +298,8 @@ form {
     max-width: 400px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
-    margin-left: 0px; 
+    margin-left: 0px;
+    padding: 35px; 
 }
 
 label {
@@ -350,7 +359,8 @@ section.trip form {
     margin-top: 0px;
     text-align: left;
     margin-left: 20px;
-    border: 1px solid blue;
+    border: 1px solid black;
+    padding: 0;
 }
 
 /* Estilos para o elemento de descrição */
@@ -564,5 +574,7 @@ table.include p {
     text-align: justify; /* To justify the text */
 }
 
-
+    nav {
+        display: flex;
+    }
 
